fix: remove deprecated -webkit-overflow-scrolling property

--- a/index.css
+++ b/index.css
@@ -134,5 +134,4 @@ img {
 
 .modal-body-scroll {
   overscroll-behavior: contain;
-  -webkit-overflow-scrolling: touch;
 }
